# mortality

./: FUTURE_FEATURES.md  README.md  pyproject.toml  test_basic.py  test_simple.py
.github/workflows/: ci.yml
src/mortality/: __init__.py  bayesian.py  centered_multipliers.py  conditional_multipliers.py  core.py  data.py  factors.py  simple.py  vectorized.py
src/mortality/fetchers/: __init__.py  ssa.py
src/mortality/research/: factors.yaml
tests/: test_mortality.py
